# jetson-batt-gauge

./: .clang-format  .gitignore  ADD.md  LICENSE.mit  README.md  check_i2c.sh  main.cpp  meson.build
include/: battery.hpp  bitwise.hpp  conversion.hpp  jetsonbatt.hpp.in  jetsonbatt_config.hpp.in  jetsonbatt_error.hpp  meson.build  parameters.hpp  registers.hpp
python/: test.py
python/battery/: __init__.py  battery.py  bitwise.py  bus_context.py  conversion.py  pin.py  registers.py
python/battery/test/unit/: __init__.py  test_bitwise.py
python/lib/: __init__.py  battery.py  bitwise.py  bus_context.py  conversion.py  registers.py
src/: battery.cpp  bitwise.cpp  conversion.h  meson.build  parameters.hpp
test/: meson.build  test.cpp  test_i2c.cpp
test/googletest/: meson.build  test_battery.cpp  test_bitwise.cpp  test_math.cpp
test/integration/: meson.build  test_i2c.cpp  vl6180x.cpp
